 syntax = "proto3";

// 包名
package hello;

// 指定輸出 go 語言的原始碼到哪個目錄以及package名稱
// 最終在 test.proto 目錄生成 test.pb.go
// 也可以只填寫 "./path"
// option go_package = "./;testuu";
option go_package = "./hello";

// 如果要輸出其它語言的話
// java
// option java_multiple_files = true;
// option java_package = "com.example.tutorial.protos";
// option java_outer_classname = "AddressBookProtos";
// cshap
// option csharp_package="MyTest";

service HelloToWho {
  // 一般
  rpc hello(HelloRequest) returns (HelloResponse) {}
  // server端stream
  rpc helloServerStream(HelloRequest) returns (stream HelloResponse) {}
  // client端stream
  rpc helloClientStream(stream HelloRequest) returns (HelloResponse) {}
  // 雙向stream
  rpc helloAllStream(stream HelloRequest) returns (stream HelloResponse) {}
}

// 函數參數
message  HelloRequest {
  string  name = 1;
}

// 函數返回值
message  HelloResponse {
  string  str = 1;
}
